# dist-mpc

./: .gitignore  .gitmodules  Dockerfile  HowTo.txt  LICENSE  README.md  transcript
benchmarks/: results.ods
blockchain/: README.md
blockchain/contracts/: DistMpc.sol  DistributedMPC.sol  MultiPartyProtocol.sol  strings.sol
blockchain/migrations/: 2_deploy_contracts.js
blockchain/test/: TestDistMpc.sol  distmpc.js
contracts/: DistMpc.sol
mpc/: Cargo.toml  README.md  abi.json  cli.yml  r1cs  verifier.yml
mpc/snark/libsnark/: Makefile
mpc/src/: compute.rs  consts.rs  coordinator.rs  dvd.rs  eth_coordinator.rs  events.rs  file.rs  player.rs  verifier.rs
mpc/src/blockchain/: contract.rs  event.rs  mod.rs
mpc/src/dist_files/: ipfs.rs  mod.rs
mpc/src/manager/: mod.rs
mpc/src/protocol/: mod.rs  secrets.rs
mpc/src/protocol/digest/: mod.rs
src/: compute.rs  network.rs
