[package]
name = "mpc"
version = "0.0.1"
authors = [
	"Sean Bowe <ewillbefull@gmail.com>",
	"Ariel Gabizon <ariel@z.cash>",
	"Matthew Green <mgreen@cs.jhu.edu>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "coordinator"
path = "src/coordinator.rs"
test = true

[[bin]]
name = "eth_coordinator"
path = "src/eth_coordinator.rs"
test = false

[[bin]]
name = "verifier"
path = "src/verifier.rs"
test = false

[[bin]]
name = "compute"
path = "src/compute.rs"
test = false

[[bin]]
name = "player"
path = "src/player.rs"
test = false

[[bin]]
name = "network"
path = "src/network.rs"
test = false

[features]
default = ["snark"]

[dependencies.snark]
path = "./snark/"
optional = true

[dependencies]
bn = "0.4.1"
crossbeam = "0.2.9"
ethabi = "4.0"
rand = "0.3.14"
rustc-serialize = "~0.3.19"
blake2-rfc = "0.2.17"
byteorder = "0.5"
tokio-core = "0.1.9"
futures = "0.1"
sha3 = "0.7.2"
generic-array = "^0.9"
digest = "^0.7"
ascii = "0.8"
# web3 = "0.1.0"

# Coordinator needs these
log = "*"
env_logger = "*"
time = "*"
ansi_term = "*"

[dependencies.bincode]
version = "0.6.0"
default-features = false
features = ["rustc-serialize"]

[dependencies.web3]
path = "src/rust-web3"