[package]
name = "mpc"
version = "0.0.1"
authors = [
	"Sean Bowe <ewillbefull@gmail.com>",
	"Ariel Gabizon <ariel@z.cash>",
	"Matthew Green <mgreen@cs.jhu.edu>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "verifier"
path = "src/verifier.rs"
test = false

[[bin]]
name = "player"
path = "src/player.rs"
test = false

[features]
default = ["snark"]

[dependencies.snark]
path = "./snark/"
optional = true

[dependencies]
blake2-rfc = "0.2.17"
bn = "0.4.1"
byteorder = "0.5"
clap = {version = "2.29.4", features = ["yaml"]}
crossbeam = "0.2.9"
ethabi = "4.0"
ethereum-types = "0.2"
futures = "0.1"
hex = "0.3.1"
ipfs-api = { git = "https://github.com/rmnoff/rust-ipfs-api", rev="17abd00" }
json = "*"
rand = "0.3.14"
rustc-serialize = "~0.3.19"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
sha3 = "0.7.2"
spinner = "0.4.0"
time = "0.1.39"
tokio-core = "0.1.9"
web3 = "0.2.0"

# Coordinator needs these
log = "*"
env_logger = "*"
ansi_term = "*"

[dependencies.bincode]
version = "0.6.0"
default-features = false
features = ["rustc-serialize"]

# [dependencies.web3]
# path = "src/rust-web3"